--- a/NanoSingular.RazorApi/NanoSingular.RazorApi.csproj
+++ b/NanoSingular.RazorApi/NanoSingular.RazorApi.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\Authentication\Unauthorized.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.2" />
@@ -26,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Pages\Profile\" />
+    <None Include="Pages\Authentication\Unauthorized.cshtml" />
   </ItemGroup>
 
 </Project>
